--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "ui5 serve -o",
+    "build": "ui5 build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mahzcn/Fiori-E-itim.git"
@@ -18,6 +21,15 @@
   },
   "homepage": "https://github.com/mahzcn/Fiori-E-itim#readme",
   "devDependencies": {
-    "@ui5/cli": "^4.0.19"
+    "@babel/core": "^7.27.7",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/plugin-transform-destructuring": "^7.27.7",
+    "@babel/plugin-transform-spread": "^7.27.1",
+    "@babel/preset-env": "^7.27.2",
+    "@ui5/cli": "^4.0.19",
+    "ui5-middleware-livereload": "^3.1.1"
+  },
+  "dependencies": {
+    "react": "^19.1.0"
   }
 }
