--- a/ui5.yaml
+++ b/ui5.yaml
@@ -10,3 +10,27 @@ framework:
     - name: sap.m
     - name: themelib_sap_horizon
       optional: true
+
+server:
+  customMiddleware:
+    - name: ui5-middleware-livereload
+      afterMiddleware: compression
+      configuration:
+        debug: true
+        extraExts: "xml,json,properties"
+        path: webapp
+
+builder: 
+  customTasks:
+    - name: transpile-babel
+      beforeTask: generateComponentPreload
+
+---
+# Babel task configuration
+specVersion: "4.0"
+kind: extension
+type: task
+metadata:
+  name: transpile-babel
+task:
+  path: lib/tasks/transpile-bable.js
