--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -42,6 +42,11 @@
                     "bundleName": "ui5.product.list.i18n.i18n"
                 }
             }
+        },
+        "resources": {
+            "css": [{
+                "uri": "css/style.css"
+            }]
         }
     }
 }
